RESOLVED FIXED186083
[LFC] Miscellaneous fixes to get closer to geometry correctness
https://bugs.webkit.org/show_bug.cgi?id=186083
Summary [LFC] Miscellaneous fixes to get closer to geometry correctness
alan
Reported 2018-05-29 22:00:03 PDT
when laying out <div></div>
Attachments
Patch (19.03 KB, patch)
2018-05-30 07:32 PDT, alan
no flags
Patch (19.05 KB, patch)
2018-05-30 07:47 PDT, alan
no flags
Patch (19.08 KB, patch)
2018-05-30 07:58 PDT, alan
no flags
alan
Comment 1 2018-05-30 07:32:50 PDT
Antti Koivisto
Comment 2 2018-05-30 07:41:45 PDT
Comment on attachment 341569 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341569&action=review > Source/WebCore/layout/blockformatting/BlockFormattingContextGeometry.cpp:120 > + auto width = [&]() { computeWidth() maybe? width() sounds like an accessor.
alan
Comment 3 2018-05-30 07:47:33 PDT
alan
Comment 4 2018-05-30 07:58:27 PDT
WebKit Commit Bot
Comment 5 2018-05-30 08:26:56 PDT
Comment on attachment 341574 [details] Patch Clearing flags on attachment: 341574 Committed r232291: <https://trac.webkit.org/changeset/232291>
WebKit Commit Bot
Comment 6 2018-05-30 08:26:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2018-05-30 08:27:17 PDT
Note You need to log in before you can comment on or make changes to this bug.